--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <button id="subscribe" onclick="subscribe()">Subscribe</button>
+    <div>
+        <p id="key"></p>
+    </div>
 
 
     <script>
@@ -22,6 +25,7 @@
                 applicationServerKey: 'BHfCxidJ4Yv3wLLdmExQDYcJAoK1guYMhy7OSydRVMy4YwAvLNJ2HvvEXwBnoLTcRP5WuACnSnjemZfZRitzScA'
             })
             console.log(JSON.stringify(push));
+            document.querySelector("#key").innerHTML = JSON.stringify(push);
         }
     </script>
 </body>
