--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <button id="subscribe" onclick="subscribe()">Subscribe</button>
     <div>
-        <p id="key"></p>
+        <p id="key">bla</p>
     </div>
 
 
@@ -25,7 +25,7 @@
                 applicationServerKey: 'BHfCxidJ4Yv3wLLdmExQDYcJAoK1guYMhy7OSydRVMy4YwAvLNJ2HvvEXwBnoLTcRP5WuACnSnjemZfZRitzScA'
             })
             console.log(JSON.stringify(push));
-            document.querySelector("#key").innerHTML = JSON.stringify(push);
+            document.querySelector('#key').innerHTML = JSON.stringify(push);
         }
     </script>
 </body>
