--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 
     <script>
         addEventListener('load', async() => {
-            let sw = await navigator.serviceWorker.register('./sw.js')
-            console.log(sw);
+            if('serviceWorker' in navigator)
+            {
+                registration = await navigator.serviceWorker.getRegistration();
+                if(!registration)
+                {
+                    registration = await navigator.serviceWorker.register('./sw.js');
+                }
+                console.log(sw);
+            }
         })
 
         async function subscribe() {
