--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TestPWA</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <button id="subscribe" onclick="subscribe()">Subscribe</button>
