--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
+    <button id="install" onclick="install()">Install</button>
+
+
     <button id="subscribe" onclick="subscribe()">Subscribe</button>
     <div>
         <p id="key">bla</p>
     </div>
 
-
     <script>
+        // Initialize deferredPrompt for use later to show browser install prompt.
+        let deferredPrompt;
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+        // Prevent the mini-infobar from appearing on mobile
+        e.preventDefault();
+        // Stash the event so it can be triggered later.
+        deferredPrompt = e;
+        // Update UI notify the user they can install the PWA
+        showInstallPromotion();
+        // Optionally, send analytics event that PWA install promo was shown.
+        console.log(`'beforeinstallprompt' event was fired.`);
+        });
+
+        window.addEventListener('appinstalled', () => {
+        // Hide the app-provided install promotion
+        hideInstallPromotion();
+        // Clear the deferredPrompt so it can be garbage collected
+        deferredPrompt = null;
+        // Optionally, send analytics event to indicate successful install
+        console.log('PWA was installed');
+        });
+
+
         addEventListener('load', async() => {
             if('serviceWorker' in navigator)
             {
@@ -38,6 +64,20 @@
             
             sendAddress(JSON.stringify(push))
        }
+
+       async function install() {
+            // Hide the app provided install promotion
+            hideInstallPromotion();
+            // Show the install prompt
+            deferredPrompt.prompt();
+            // Wait for the user to respond to the prompt
+            const { outcome } = await deferredPrompt.userChoice;
+            // Optionally, send analytics event with outcome of user choice
+            console.log(`User response to the install prompt: ${outcome}`);
+            // We've used the prompt, and can't use it again, throw it away
+            deferredPrompt = null;
+       }
+
        function sendAddress(endpoint) {
             console.log("Sending...")
             fetch('https://scrambleserver.onrender.com/push-notif',{
