--- a/index.html
+++ b/index.html
@@ -16,30 +16,7 @@
     </div>
 
     <script>
-        // Initialize deferredPrompt for use later to show browser install prompt.
-        let deferredPrompt;
-
-        window.addEventListener('beforeinstallprompt', (e) => {
-        // Prevent the mini-infobar from appearing on mobile
-        e.preventDefault();
-        // Stash the event so it can be triggered later.
-        deferredPrompt = e;
-        // Update UI notify the user they can install the PWA
-        showInstallPromotion();
-        // Optionally, send analytics event that PWA install promo was shown.
-        console.log(`'beforeinstallprompt' event was fired.`);
-        });
-
-        window.addEventListener('appinstalled', () => {
-        // Hide the app-provided install promotion
-        hideInstallPromotion();
-        // Clear the deferredPrompt so it can be garbage collected
-        deferredPrompt = null;
-        // Optionally, send analytics event to indicate successful install
-        console.log('PWA was installed');
-        });
-
-
+    
         addEventListener('load', async() => {
             if('serviceWorker' in navigator)
             {
@@ -66,14 +43,21 @@
        }
 
        async function install() {
-            // Show the install prompt
-            deferredPrompt.prompt();
-            // Wait for the user to respond to the prompt
-            const { outcome } = await deferredPrompt.userChoice;
-            // Optionally, send analytics event with outcome of user choice
-            console.log(`User response to the install prompt: ${outcome}`);
-            // We've used the prompt, and can't use it again, throw it away
-            deferredPrompt = null;
+        let deferredPrompt;
+        window.addEventListener('beforeinstallprompt', (e) => {
+            deferredPrompt = e;
+        });
+
+        const installApp = document.getElementById('installApp');
+        installApp.addEventListener('click', async () => {
+            if (deferredPrompt !== null) {
+                deferredPrompt.prompt();
+                const { outcome } = await deferredPrompt.userChoice;
+                if (outcome === 'accepted') {
+                    deferredPrompt = null;
+                }
+        }
+    });
        }
 
        function sendAddress(endpoint) {
