--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script>
          let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
             deferredPrompt = e;
         });
 
