--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
     </div>
 
     <script>
-         let deferredPrompt;
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
+        let deferredPrompt;
+
+        window.addEventListener('beforeinstallprompt', (event) => {
+        // Prevent Chrome 67 and earlier from automatically showing the prompt
+        event.preventDefault();
+        // Stash the event so it can be triggered later
+        deferredPrompt = event;
         });
 
-        const installApp = document.getElementById('install');
-        installApp.addEventListener('click', async () => {
-            if (deferredPrompt !== null) {
-                deferredPrompt.prompt();
-                const { outcome } = await deferredPrompt.userChoice;
-                if (outcome === 'accepted') {
-                    deferredPrompt = null;
-                }
+        // When the user clicks the install button, call deferredPrompt.prompt()
+        installButton.addEventListener('click', (event) => {
+        // Show the install prompt
+        deferredPrompt.prompt();
+        // Wait for the user to respond to the prompt
+        deferredPrompt.userChoice.then((choiceResult) => {
+            if (choiceResult.outcome === 'accepted') {
+            console.log('User accepted the install prompt');
+            } else {
+            console.log('User dismissed the install prompt');
             }
+            // Clear the saved prompt variable
+            deferredPrompt = null;
         });
+        });
+
     
         addEventListener('load', async() => {
             if('serviceWorker' in navigator)
