--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
         let deferredPrompt;
 
         window.addEventListener('beforeinstallprompt', (event) => {
-        // Prevent Chrome 67 and earlier from automatically showing the prompt
-        event.preventDefault();
-        // Stash the event so it can be triggered later
-        deferredPrompt = event;
+            // Prevent Chrome 67 and earlier from automatically showing the prompt
+            event.preventDefault();
+            // Stash the event so it can be triggered later
+            deferredPrompt = event;
         });
-
+        const installButton = document.querySelector('#install');
         // When the user clicks the install button, call deferredPrompt.prompt()
         installButton.addEventListener('click', (event) => {
-        // Show the install prompt
-        deferredPrompt.prompt();
-        // Wait for the user to respond to the prompt
-        deferredPrompt.userChoice.then((choiceResult) => {
-            if (choiceResult.outcome === 'accepted') {
-            console.log('User accepted the install prompt');
-            } else {
-            console.log('User dismissed the install prompt');
-            }
-            // Clear the saved prompt variable
-            deferredPrompt = null;
-        });
+            // Show the install prompt
+            deferredPrompt.prompt();
+            // Wait for the user to respond to the prompt
+            deferredPrompt.userChoice.then((choiceResult) => {
+                if (choiceResult.outcome === 'accepted') {
+                console.log('User accepted the install prompt');
+                } else {
+                console.log('User dismissed the install prompt');
+                }
+                // Clear the saved prompt variable
+                deferredPrompt = null;
+            });
         });
 
     
