--- a/index.html
+++ b/index.html
@@ -26,23 +26,30 @@
         });
         const installButton = document.querySelector('#install');
         // When the user clicks the install button, call deferredPrompt.prompt()
-        installButton.addEventListener('click', (event) => {
-            if (deferredPrompt !== undefined && deferredPrompt !== null) {
-    // Show the install prompt
-    deferredPrompt.prompt();
-    // Wait for the user to respond to the prompt
-    deferredPrompt.userChoice.then((choiceResult) => {
-      if (choiceResult.outcome === 'accepted') {
-        console.log('User accepted the install prompt');
-      } else {
-        console.log('User dismissed the install prompt');
-      }
-      // Clear the saved prompt variable
-      deferredPrompt = null;
-            });
+        installButton.addEventListener('click', (event) => 
+        {
+            if (deferredPrompt !== undefined && deferredPrompt !== null) 
+            {
+                // Show the install prompt
+                deferredPrompt.prompt();
+                // Wait for the user to respond to the prompt
+                deferredPrompt.userChoice.then((choiceResult) => 
+                {
+                    if (choiceResult.outcome === 'accepted') 
+                    {
+                        console.log('User accepted the install prompt');
+                    } else 
+                    {
+                        console.log('User dismissed the install prompt');
+                    }
+                    // Clear the saved prompt variable
+                    deferredPrompt = null;
+                });
+            };
+                
+
         });
 
-    
         addEventListener('load', async() => {
             if('serviceWorker' in navigator)
             {
